--- a/03_jQuery-Test/BeatGen.html
+++ b/03_jQuery-Test/BeatGen.html
@@ -260,9 +260,7 @@ Unless otherwise noted, all materials are in the Media Resources Center, Moffitt
 <dd>Interviews with jazz musicians commenting upon the impact which John Coltrane, an innovative jazz saxophonist, had upon American jazz music. Film traces Coltrane's musical growth from his roots in the black church and in rhythm & blues, through his forty years of life. Film culminates in a musical meeting between the saxophonist Roscoe Mitchell and dervish musicians in Morocco. 59 min. <b>DVD X2945; Video/C 3125</b><br>
 </dd>
 </dl>
-<dl>
-<dt>Ж</dt>
-</dl>
+
 <h2>The Documentary RecordЖ</h2>
 <br><h3>Anthologies and MiscellanyЖ</h3><b>Video</b><dl>
 <dt><b>The Ballad of Greenwich Village: Culture and Counter-culture</b></dt>
@@ -636,9 +634,7 @@ Background information on the recordings in container. Compilation of tapes by W
 <dt><b>You're the Guy I Want to Share My Money With.</b></dt>
 <dd>Contents: Dr. Miller; It Was Up in the Mountains; Drums; Closed Circuits; Born, Never Asked / Laurie Anderson -- I Don't Need it, I Don't Want It, and You Cheated Me Out Of It; Completely Attached to Delusions / John Giorno -- Introducing John Stanley Hart; He Entered the Bar with the Best Intensions; Twilight's Last Gleamings; My Protagonist Kim Carson; Salt chunk Mary; like Mr. Hart, Kim has a Dark Side to His Character; Progressive Education; The Wild Fruits; The Unworthy Vessel / William S. Burroughs -- For Electric Dogs; Structuralist Film Making; Drums / Laurie Anderson; The Name is Clem Snide; Mr. Hart Couldn't Hear the Word Death / William S. Burroughs; Put Your Ear to Stone & Open Your Heart to the Sky / John Giorno. (New York: Giorno Poetry Systems Records, c1981.) 1 sound cassette <b>Sound/D 7; also in Bancroft: Bancroft Phonotape 1428 B</b></dd>
 </dl>
-<dl>
-<dt>Ж</dt>
-</dl><h3>Neal Cassady</h3><dl>
+<h3>Neal Cassady</h3><dl>
 <dt><br>
 </dt>
 <dt><b>Allen Ginsberg: Second Edition</b></dt>
