--- a/03_jQuery-Test/Comedyfilm2.html
+++ b/03_jQuery-Test/Comedyfilm2.html
@@ -556,10 +556,10 @@ Performer: Harry Langdon, Vernon Dent, Alice Ward (1st work); Harry Langdon, Fra
 <dd>â€¢149;Get Out and Get Under (1920) 25 min. DVD 4683</dd>
 <dd>â€¢149;Girl Shy (1924) 999:1456</dd>
 <dd>â€¢149;Haunted Spooks (1920) 25 min. DVD 4683</dd>
-<dd>â€¢149;High and Dizzy (1920) 26 min. 999:1453</dd>
+<dd>â€¢149;High and Dizzy (1920) 26 min. Video 999:1453</dd>
 <dd>â€¢149;Hot Water (1924)60 min. DVD 4683</dd>
 <dd>â€¢149;I Do (1921)25 min. DVD 4683</dd>
-<dd>â€¢149;I'm On My Way (1919) 12 min. 999:1453, 999:581</dd>
+<dd>â€¢149;I'm On My Way (1919) 12 min. Video 999:1453, 999:581</dd>
 <dd>â€¢149;Movie crazy (1932) 96 min. DVD 4683</dd>
 <dd>â€¢149;Never Weaken (1921) 22 min. DVD 4683; DVD 4324  999:1453</dd>
 <dd>â€¢149;Number Please? (1920) 25 min. DVD 4683; also on DVD 1609</dd>
