--- a/03_jQuery-Test/LitCrit.html
+++ b/03_jQuery-Test/LitCrit.html
@@ -1031,7 +1031,7 @@ Performer: Performers: Maggie Estep, Regie Cabico, Stan Rogal, Reg E. Gaines, Um
 </dl>
 <dl>
 <dt><b>[KafkaЖ, Franz] Kafka</b></dt>
-<dd>Directed by Steven Soderbergh. Cast: Jeremy Irons, Theresa Russell, Alec Guinness, Joel Grey. In 1919 Prague, Czechoslovakia, Jeremy Irons plays Kafka, an insurance clerk and aspiring writer leading a staid and reclusive life, until his closest friend mysteriously disappears without a trace. A seductive co-worker leads Kafka to a group of anarchists who speak of a "cover-up of monumental proportions" controlled from within a castle outside the city. Searching for the truth, Kafka ventures behind the castle's walls and discovers a terrifying secret. 1991. 100 min. 999:3365</dd>
+<dd>Directed by Steven Soderbergh. Cast: Jeremy Irons, Theresa Russell, Alec Guinness, Joel Grey. In 1919 Prague, Czechoslovakia, Jeremy Irons plays Kafka, an insurance clerk and aspiring writer leading a staid and reclusive life, until his closest friend mysteriously disappears without a trace. A seductive co-worker leads Kafka to a group of anarchists who speak of a "cover-up of monumental proportions" controlled from within a castle outside the city. Searching for the truth, Kafka ventures behind the castle's walls and discovers a terrifying secret. 1991. 100 min. Video 999:3365</dd>
 </dl>
 <dl>
 <dt><b>[KafkaЖ, Franz] Metamorphosis</b></dt>
@@ -1722,7 +1722,7 @@ UC Berkeley users only</dd>
 <dd>Zola, the greatest of the French naturalist writers, gave us detailed and convincing portraits of Paris and Parisian life in his time. This program uses rare film footage from Zola's lifetime to document the Paris of the Second Empire that Zola knew. Dist.: Ѭ href="http://www.films.com">Films Media Group.Ж 2006. 26 min. <b>DVD 6114</b></dd>
 </dl>
 <dl>
-<dt>Ѭ href="#top">To the topЖ</dt>
+
 <dt><br>
 </dt>
 </dl>
