--- a/03_jQuery-Test/ancientciv.html
+++ b/03_jQuery-Test/ancientciv.html
@@ -4,18 +4,8 @@
 </head>
 <body>
 <div id="dvData">
-<h1>Ancient and Classical Civilizations</h1><dl>
-<dd>â€¢149;Ѭ href="#general">General and MiscellaneousЖ</dd>
-<dd>â€¢149;Ѭ href="#americas">The AmericasЖ</dd>
-<dd>â€¢149;Ѭ href="#asia">AsiaЖ</dd>
-<dd>â€¢149;Ѭ href="#meast">Middle EastЖ</dd>
-<dd>â€¢149;Ѭ href="#preeuro">Prehistoric EuropeЖ</dd>
-<dd>â€¢149;Ѭ href="#euro">Classical EuropeЖ</dd>
-</dl>
-<dl>
-<dd data-sortby="9">See also:</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/ancientmovies.html">Ancient Greece and Rome in the MoviesЖ</dd>
-</dl><h2>General and MiscellaneousЖ</h2>
+<h1>Ancient and Classical Civilizations</h1>
+<h2>General and MiscellaneousЖ</h2>
 <dl>
 <dt><b>Archeology, Unearthing Our Past</b></dt>
 <dd>An overview of archeological exploration throughout the world and the role it has played in discovering the pre-history of mankind. Features archival film footage with commentary by authors, academics and historians. Produced and written by Adam Sternberg. Supplementary feature accompanying: <i>Adventures of Young Indiana Jones.</i> 20 min. DVD X233</dd>
@@ -215,10 +205,7 @@
 <dt><b>Tsubaki Grand Shrine: A Shrine for all Seasons.</b></dt>
 <dd>This documentary focuses on a year in the life of one of Japan's oldest and greatest Shinto shrines, the Tsubaki Grand Shrine (the first shrine in the ancient province of Ise). Various rituals, ceremonies, and celebrations are held at the shrine throughout the year. c1990. 40 min. <b>Video/C 1878</b></dd>
 </dl>
-<dl>
-<dt>Ѭ href="#top">To the topЖ<br>
-</dt>
-</dl>
+
 <h2>Middle EastЖ</h2>
 <dl>
 <dt><b>Ancient Egypt.</b></dt>
@@ -261,7 +248,7 @@
 </dl>
 <dl>
 <dt><b>The Treasures of Tutankhamun.</b></dt>
-<dd>This program describes the genesis of the exhibition, Treasures of Tutankhamen, which will be seen in six major American cities, including Chicago. The discovery of the tomb of King Tutankhamen by Howard Carter is portrayed and many of the treasures from the tomb which are included in the exhibition are photographed. 29 min. <b>Video/C B 3 969 168 NRLF</b></dd>
+<dd>This program describes the genesis of the exhibition, Treasures of Tutankhamen, which will be seen in six major American cities, including Chicago. The discovery of the tomb of King Tutankhamen by Howard Carter is portrayed and many of the treasures from the tomb which are included in the exhibition are photographed. 29 min. <b>Video/C 49</b></dd>
 </dl>
 <dl>
 <dt><b>Tutankhamun, The Last Pharaoh</b></dt>
@@ -272,10 +259,7 @@
 <dd>â€¢149; <b>Programs 1-2:</b> Program 1. Introduction to the course; including the edifice sequence from "Why man creates" by Saul Bass. Begins historical overview at the end of the age of the giant reptiles and covers the origins of religion. (27:00) Program 2. Covers the area known as the fertile cresent, and the Egyptian civilization. Explores the role of the gods and the pharoh in the society. (27:35) <b>Video/C 1500</b></dd>
 <dd>â€¢149;<b>Program 3.</b> The oasis between the rivers was Mesopotamia, a land of fantastic gods and ruthless pragmatism. Discusses Mesopotamia as the source of the origins of western laws, trade and money. (27:00) Program 4. As the ancient empires of Assyria, Babylonia and Persia collapsed, cities grew around the Mediterranean and civilization spread through war and the distribution of booty. (27:37) <b>Video/C 1501</b></dd>
 </dl>
-<dl>
-<dt>Ѭ href="#top">To the topЖ<br>
-</dt>
-</dl>
+
 <h2>Prehistoric EuropeЖ</h2>
 <dl>
 <dt><b>Cave of Forgotten Dreams</b></dt>
@@ -444,10 +428,6 @@
 <dd>â€¢149;<b>Programs 15-16.</b> Program 15 discusses the Byzantine Empire, and its' capital Constantinople. Covers the influence of Roman tradition, and how it served as a bridge for various cultures including Greco-Roman, oriental, and Christian influences. (27:00) Program 16 explores the role of Constantinople as a center of trade. Covers the effect of theological disputes that were a major influence for the fall of the Byzantine Empire. (27:48) <b>Video/C 1507</b></dd>
 </dl>
 </div><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="../conversion.js"></script>
-<script src="../exportCSV.js"></script>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
 <script src="../exportCSV.js"></script>
 </body>
