--- a/03_jQuery-Test/ancientmovies.html
+++ b/03_jQuery-Test/ancientmovies.html
@@ -4,23 +4,10 @@
 </head>
 <body>
 <div id="dvData">
-<table>
-<tr><td><br>
-<h3><b>Ancient Civilizations in the Movies</b></h3><img src="http://www.lib.berkeley.edu/MRC/contents.gif" border="0">
-<dl>
-<dd>â€¢149;Ѭ href="#egypt">Egypt and the Middle EastЖ</dd>
-<dd>â€¢149;Ѭ href="#greecerome">Classical Greece and RomeЖ</dd>
-<dd>â€¢149;Ѭ href="#newworld">The New WorldЖ</dd>
-</dl>
-<b>Ancient Greece and RomeЖ</b>
-<dl>
-<dd data-sortby="9">See also the following MRC Videographies:</dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/classicaltheater.html">Classical Greek DramaЖ</dd>
-</dl>
-<dl>
-<dd>Bibliography on this topic: </dd>
-<dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/ancientbib.html">Ancient Greece and Rome in the Movies bibliographyЖ</dd>
-</dl>
+
+<h1><b>Ancient Civilizations in the Movies</b></h1>
+
+<h3>Classical Greece and Rome</h3>
 <dl>
 <dt><b>Agora</b> (Spain, 2009)</dt>
 <dd>Directed by Alejandro Amenâ€¢225;bar. Cast: Rachel Weisz, Max Minghella, Oscar Isaac, Ashraf Barhom, Rupert Evans, Homayoun Ershadi, Michael Lonsdale, Sammy Samir, Richard Durden, Omar Mostafa, Oshri Cohen, Yousef Sweid. A historical drama set in Roman Egypt, concerning a slave who turns to the rising tide of Christianity in the hopes of pursuing freedom while also falling in love with his master, the famous female philosophy and mathematics professor Hypatia of Alexandria. Special features: Director presentation; director commentary; Journey to Alexandria (documentary); deleted scenes; storyboards; photo gallery. 126 min. <b>DVD X6167</b><li>â€¢149; Ѭ href="http://us.imdb.com/title/tt0346491/">Credits and other information from the Internet Movie DatabaseЖ</dd>
@@ -29,10 +16,6 @@
 <dt><b>Alexander</b> (2004)</dt>
 <dd>Directed by Oliver Stone. Cast: Colin Farrell, Angelina Jolie, Val Kilmer, Anthony Hopkins. The story of Alexander the Great, who in 4th century BC conquered ninety percent of the known world of the time by defeating Greece, Persia, Afghanistan, and India in just eight years. 167 min. <b>DVD 4171</b><li>â€¢149; Ѭ href="http://us.imdb.com/title/tt0346491/">Credits and other information from the Internet Movie DatabaseЖ
 </dd>
-</dl>
-<dl>
-<dt><b>Anthony and Cleopatra</b></dt>
-<dd>For various dramatizations featuring Anthony and Cleopatra, SEE Ѭ href="#egypt">Ancient Egypt and the Middle EastЖ</dd>
 </dl>
 <dl>
 <dt><b>Ben-Hur</b> (1959)</dt>
@@ -92,10 +75,7 @@
 </dl>
 </dd>
 </dl>
-<dl>
-<dt><b>Cleopatra</b></dt>
-<dd>For various dramatizations featuring Cleopatra, SEE Ѭ href="#egypt">Ancient Egypt and the Middle EastЖ</dd>
-</dl>
+
 <dl>
 <dt><b>Coriolanus</b> (1951)</dt>
 <dd>William Shakespeare. Live television adaptation of Coriolanus in modern dress. The settings of ancient Rome are turned into Fascist Italy. Featuring Richard Greene, Judith Evelyn, Richard Purdy, Tom Poston. 145 min. <b>Video/C 2665</b></dd>
@@ -109,10 +89,7 @@
 <dd>William Shakespeare. BBC production, 1983. Cast: Anthony Pedley, Foss Ackland, Irene Worth, Teddy Kempner, Alan Howard, Peter Sands. 60 min. <b>Video/C 2277</b></dd>
 <dd>â€¢149; Ѭ href="http://us.imdb.com/Title?0060438">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<dl>
-<dt><b>Demetrius and the GadiatorsЖ</b> (1954)</dt>
-<dd>See Ѭ href="http://www.lib.berkeley.edu/MRC/religiousfilms.html#demetrius">Religious Themes in the Movies & TelevisionЖ</dd>
-</dl>
+
 <dl>
 <dt><b>The Fall of the Roman Empire</b> (1964)</dt>
 <dd>Directed by Anthony Mann. Cast: Sophia Loren, Stephen Boyd, Alec Guinness, James Mason, Christopher Plummer, Anthony Quayle, John Ireland, Omar Sharif, Mel Ferrer. After poisoning the Emperor of the Roman Empire Marcus Aurelius, his supposed son Commodus falls into dissipation and allows Rome to be ravaged by pestilence and the Barbarians. Thus begins the fall of the Roman Empire; a great civilization not conquered from without until it had destroyed itself from within. 185 min. <b>DVD 5653</b></dd>
@@ -253,10 +230,7 @@
 </dl>
 </dd>
 </dl>
-<dl>
-<dt><b>The RobeЖ</b>(1953)</dt>
-<dd>See Ѭ href="http://www.lib.berkeley.edu/MRC/religiousfilms.html#robe">Religious Themes in the Movies & TelevisionЖ</dd>
-</dl>
+
 <dl>
 <dt><b>Roman Legion-Hare</b> (1955)</dt>
 <dd>Animated short. Directed by Friz Freleng. Yosemite Sam, as head of a Roman legion, is ordered by Emperor Nero to find a victim to toss to the lions. Or else, he'll be the victim. Sam meets up with Bugs Bunny and decides Bugs will make a good victim. But it's Sam and Nero who end up as lion food. <b>DVD 7359</b></dd>
@@ -356,15 +330,15 @@
 <dt><b>Troy</b> (2004)</dt>
 <dd>Directed by Wolfgang Petersen. Cast: Julian Glover, Brian Cox, Nathan Jones, Adoni Maropis, Jacob Smith, Brad Pitt, John Shrapnel, Brendan Gleeson, Diane Kruger, Eric Bana, Orlando Bloom, Sean Bean, Julie Christie, Peter O'Toole. In 1193 B.C., Prince Paris, the son of the King of Troy falls in love with Helen, the wife of the king of Sparta, and convinces her to follow him away from her husband, Menelaus, precipitating an epic war. The Greeks sail to Troy and lay siege. Achilles, the greatest warrior in all the world, is called in to fight against Troy and give Greece the upper hand. Hector, the eldest son of Priam, King of Troy, and the greatest Trojan warrior embodies the hopes of the people of his city. Based on the poem "Iliad" by Homer. 163 min. <b>DVD 3382</b><br><li>â€¢149; Ѭ href="http://us.imdb.com/title/tt0332452/">Credits and other information from the Internet Movie DatabaseЖ<br>
 </dd></dl>
+
+<h3><b>Egypt and the Middle EastЖ</b></h3>
 <dl>
-<dt><b>Egypt and the Middle EastЖ</b></dt>
 <dt><b>Anthony & Cleopatra</b> (UK, 1980)</dt>
-<dd>Produced by Jonathan Miller. Cast: Colin Blakely, Jane Lapotaire, Ian Charleson, Emrys James, Esmond Knight. BBC production. 160 min. <b>DVD 599 Video/C 2662</b><dl>
+<dd>Produced by Jonathan Miller. Cast: Colin Blakely, Jane Lapotaire, Ian Charleson, Emrys James, Esmond Knight. BBC production. 160 min. <b>DVD 599 Video/C 2662</b>
 <dd data-sortby="9">Reviews and articles:</dd>
 <dd>â€¢149;Royster, Francesca T. <b>Becoming Cleopatra : the shifting image of an icon.</b> New York : Palgrave Macmillan, 2003. (Main Stack PN57.C55; R69 2003)</dd>
 </dl>
-</dd>
-</dl>
+
 <dl>
 <dt><b>Anthony & Cleopatra</b> (1983)</dt>
 <dd>Directed by Lawrence Carra. Cast: Lynn Redgrave, Timothy Dalton, et al. <b>Video/C 753:1-2</b></dd>
@@ -435,7 +409,7 @@
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0048283/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
-<dt><b>The Mummy</b> SEE Ѭ href="http://www.lib.berkeley.edu/MRC/horror.html#mummies">Horror FilmsЖ</dt>
+
 <dt><b>Prince of Egypt</b> (1998)</dt>
 <dd>Directed by Brenda Chapman, Steve Hickner, Simon Wells. Voices: Val Kilmer, Ralph Fiennes, Michelle Pfeiffer, Sandra Bullock, Jeff Goldblum, Danny Glover, Patrick Stewart. A musical animated adaptation of the story of Moses. Two brothers, one born of royal blood, one an orphan with a secret past grow up the best of friends. But the truth will ultimately set them apart, as one becomes the ruler of a powerful empire, while the other is revealed as the chosen leader of the Jewish people, destined to free them from bondage. 99 min. <b>DVD 1408</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?0120794">Credits and other information from the Internet Movie DatabaseЖ</dd></dl>
 <dl>
@@ -446,9 +420,8 @@
 <dt><b>Sinbad and the Eye of the Tiger</b> (1977)</dt>
 <dd>Directed by Sam Wanamaker. Cast: Patrick Wayne, Taryn Power, Margaret Whiting, Jane Seymour, Patrick Troughton. Sinbad, daring sailor and Prince of Baghdad, sets out to do battle with a Minaton, a bronze colossus, a giant troglodyte and other assorted creatures in a quest designed to win the hand of a beautiful princess. 114 min. <b>DVD 3396</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0076716/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
+<h3><b>The New WorldЖ</b></h3>
 <dl>
-<dt><b>The Ten Commandments</b> SEE Ѭ href="http://www.lib.berkeley.edu/MRC/religiousfilms.html">Religious Themed FilmsЖ</dt>
-<dt><b>The New WorldЖ</b></dt>
 <dt><b>Apocalypto</b> (2006)</dt>
 <dd>Directed by Mel Gibson. Cast: Rudy Youngblood, Dalia Hernandez, Jonathan Brewer, Morris Birdyellowhead, Carlos Emilio Baez, Ramirez Amilcar, Israel Contreras, Israel Rios, Maria Isabel Diaz, Espiridion Acosta Cache, Mayra Serbulo, Iazua Larios, Lorena Hernandez, Itandehui Gutierrez, Sayuri Gutierrez. As the Mayan kingdom faces its decline, the rulers insist the key to prosperity is to build more temples and offer human sacrifices. Jaguar Paw is a young man who is captured for sacrifice, but flees to avoid his fate. He is taken on a perilous journey to a world that is ruled by fear and oppression, where a harrowing end awaits him. Through a twist of fate and spurred by the power of his love for his woman and his family he will make a desperate break to return home and to ultimately save his way of life. Special features: "Becoming Mayan: making 'Apocalypto'" ; deleted scene with optional commentary by director Mel Gibson and co-writer Farhad Safinia ; feature commentary by director Mel Gibson and co-writer Farhad Safinia. 138 min. <b>DVD 7535</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0472043/">Credits and other information from the Internet Movie DatabaseЖ</dd>
@@ -459,13 +432,8 @@
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0064907/">Credits and other information from the Internet Movie DatabaseЖ<br>
 Ѭ href="#top">To the topЖ
 </dd>
-</dl></td>
-</tr>
-</table>
-<dl>
-<dt></dt>
-</dl><br>Ѭ href="commentform.html">Gary Handman, Head, Media Resources Center.Ж<br>
-<br></div>
+</dl>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
 <script src="../exportCSV.js"></script>
