--- a/03_jQuery-Test/areastudieslist.html
+++ b/03_jQuery-Test/areastudieslist.html
@@ -1,66 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head><title>Area Studies: Media Resources Center UCB</title><script language="JavaScript" type="text/javascript">  <!--
-function loadit(form, win) {
-win.location.href = form.menu.options[form.menu.selectedIndex].value  }  // --></script><link rel="stylesheet" type="text/css" href="../conversion.css">
-</head>
-<body>
-<div id="dvData">
-<table>
-<tr><td><br>
-<h3>Area Studies<br>
-Videos in the Media Resources Center,<br>
-UC Berkeley Library</h3><dl>
-<dt>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/global.html">Global Issues and EventsЖ</dt>
-<dd>Includes works on globalization, international human rights issues and events, the United Nations.</dd>
-<dd>SEE ALSO:
-<dl>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/childwelfare.html">International Child Welfare IssuesЖ</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/EthnographyVid.html#tourism">Global TourismЖ</dd>
-</dl>
-</dd>
-</dl><dl>
-<dt>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/AfricanVid.html">African StudiesЖ</dt>
-<dd>See also: Ѭ href="http://www.lib.berkeley.edu/MRC/africandiaspora.html">African DiasporaЖ</dd>
-</dl>
-<dl>
-<dt>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/CJKVid.html">China, Japan, Korea and Pacific Islands StudiesЖ</dt>
-<dt>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/easterneurope.html">Eastern EuropeЖ</dt>
-<dt>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/EuroVid.html">Western and Northern EuropeЖ</dt>
-<dt>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/EuroVid.html#eurorace">Immigration/Race Relations in EuropeЖ</dt>
-<dt>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/terrorism.html">International Terrorism (incl. works on 9/11)Ж</dt>
-<dt>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/LatinAmVid.html">Latin America: Mexico, the Caribbean, South AmericaЖ</dt>
-<dt>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/MidEastVid.html">Middle East and North AfricaЖ</dt>
-<dt>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/SSEAsiaVid.html">South and South East Asia and Oceania StudiesЖ</dt>
-<dt>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/PACSVid.html">Peace and Conflict StudiesЖ</dt>
-<dt><br>
-<dd data-sortby="9">See also the following MRC Videographies:</dd><br>
-</dt>
-<dt>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/moviesbylanguagelist.html">Movies by Language/CountryЖ</dt>
-</dl>
-</td>
-</tr>
-</table><script language="JavaScript" type="text/javascript">
-<!--
-var SymRealOnLoad;
-var SymRealOnUnload;function SymOnUnload()
-{
-  window.open = SymWinOpen;
-  if(SymRealOnUnload != null)
-     SymRealOnUnload();
-}function SymOnLoad()
-{
-  if(SymRealOnLoad != null)
-     SymRealOnLoad();
-  window.open = SymRealWinOpen;
-  SymRealOnUnload = window.onunload;
-  window.onunload = SymOnUnload;
-}SymRealOnLoad = window.onload;
-window.onload = SymOnLoad;//-->
-</script>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="../conversion.js"></script>
-<script src="../exportCSV.js"></script>
-</body>
-</html>
+DELETED
