--- a/03_jQuery-Test/artists.html
+++ b/03_jQuery-Test/artists.html
@@ -3,24 +3,9 @@
 </head>
 <body>
 <div id="dvData">
-<table>
-<tr><td>
-<h2><b>Artists in the Movies</b></h2><dl>
-<dd><dl>
-<dd data-sortby="9">See also:</dd>
-<dd>â€¢149;"Art Goes to the Movies" [Special section]. <i>ARTnews</i> v. 105 no. 11 (December 2006) p. 112-23</dd>
-<dd>â€¢149;Dixon, S. "Picture perfect: artist stereotypes in film." <i>Art Paper</i>s v. 22 no. 6 (November/December 1998) p. 32-3Ѭ href="http://vnweb.hwwilsonweb.com/hww/jumpstart.jhtml?recid=0bc05f7a67b1790e941a81a197ed1fca7f3d4458abc48968e13cf19fb76b2b61e78125953437611d&fmt=H">Full-text of this article / review is available:UC users onlyЖ</dd>
-<dd>â€¢149;Felleman, Susan. <b>Art in the cinematic imagination</b> Austin : University of Texas Press, 2006. (MAIN: PN1995.9.A73 F46 2006)</dd>
-<dd>â€¢149;Collings, Matthew. "From Raging Bulls to Miserable Drips." <i>Modern Painters</i>, Nov2009, Vol. 21 Issue 8, p24-26, 3p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=f5h&AN=47684358&site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
-<dd>â€¢149;Felleman, Susan. "Dirty Pictures, Mud Lust, and Abject Desire." <i>Film Quarterly</i>; Fall2001, Vol. 55 Issue 1, p27, 14p Ѭ href="http://caliber.ucpress.net/doi/pdfplus/10.1525/fq.2001.55.1.27">Full-text of this article / review is available:UC users onlyЖ</dd>
-<dd>â€¢149;Fulford, R. "Portrait of the artist as explosive device." [artists in some recent and not-so-recent films]. <i>Canadian Art</i> v. 14 (Spring 1997) p. 54-9</dd>
-<dd>â€¢149;McFarlane, Brian. "Portraits in celluloid." <i>Meanjin</i>, March-June 2005 v64 i1-2 p28(8) Ѭ href="http://galenet.galegroup.com/servlet/LitRC?&srchtp=adv&c=1&ste=78&stab=2048&tbst=asrch&tab=2&ADVST1=RN&bConts=2050&ADVSF1=A133249393&docNum=A133249393&locID=ucberkeley">Full-text of this article / review is available:UC users onlyЖ</dd>
-<dd>â€¢149;Robards, Brooks. "Reel Art: Excursions into the Biopic, Mystery/Suspense, Melodrama and Movies in the Eighties." In: <b>Beyond the stars: Vol. 3: The material world in American popular film</b> / edited by Paul Loukides and Linda K. Fuller. Bowling Green, Ohio : Bowling Green University Popular Press, c1990- (Main Stack PN1995.9.C36.B49 1990; Moffitt PN1995.9.C36.B49 1990)</dd>
-<dd>â€¢149;<b>Artist</b> A fast-paced journey through Hollywood's depiction of the artist. Using a wealth of clips from classic cinema bio pics and popular television sitcoms, the voyage spans centuries of art and art-making to reveal how five decades of mainstream media have perceived the creative process and creators themselves. A video collaboration between Tracey Moffatt and Gary Hillberg. 1999. 10 min.<br>
-<b>Video/C MM978</b></dd>
-</dl>
-</dd>
-</dl>
+
+<h2><b>Artists in the Movies</b></h2>
+
 <dl>
 <dt><b>Age of Consent</b> (Australia, 1969)</dt>
 <dd>Directed by Michael Powell. Cast: James Mason, Helen Mirren, Jack MacGowran. Based on the life of controversial Australian artist Norman Lindsay. Lindsay is a jaded painter who heads Down Under looking for a way to revitalize his creative soul. His self-imposed exile is interrupted by Cora, an uninhibited young woman on her own journey of self-discovery. Based on the novel by Norman Lindsay. Special features: Director Martin Scorsese on Age of consent; commentary with historian Kent Jones; making Age of consent; Helen Mirren: a conversation with Cora; Down Under with Ron and Valerie Taylor. 106 min. <b>DVD X1382</b></dd>
@@ -120,10 +105,13 @@
 <dl>
 <dt><b>Carrington</b> (UK | France, 1995)</dt>
 <dd>Directed by Christopher Hampton. Cast: Emma Thompson, Jonathan Pryce, Steven Waddington, Rufus Sewell, Samuel West, Penelope Wilton. A dramatization of the life of Dora Carrington, the Victorian Era painter whose passionate life created one of England's greatest scandals. Unable to possess the one man she loves, Lytton Strachey, Carrington embarks on a long string of loveless sexual encounters. Based on the book "Lytton Strachey" by Michael Holroyd. 122 min. <b>DVD X2539</b></dd>
-<dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0112637/">Credits and other information from the Internet Movie DatabaseЖ<dl>
+
+</dl>
+<dl>
+<dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0112637/">Credits and other information from the Internet Movie DatabaseЖ
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Cannes Film Festival - Jury Prize</dd>
-</dl><dl><dd data-sortby=9>Reviews and articles:</dd>
+<dd data-sortby=9>Reviews and articles:</dd>
 <dd>â€¢149;Macnab, Geoffrey. "Carrington" <i>Sight & Sound,</i> September 1995, Vol. 5, p46-47, 2p Ѭ href="http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&res_dat=xri:iipa:&rft_dat=xri:iipa:article:citation:iipa00088449">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Monk, Claire. "Sexuality and the heritage." <i>Sight & Sound</i>; October 1995, Vol. 5, p32-34, 3p Ѭ href="http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&res_dat=xri:iipa:&rft_dat=xri:iipa:article:citation:iipa00088413">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Mott, George. "Carrington" <i>Psychoanalytic Review</i>, 1996, Vol. 83 Issue 3, p447-450, 4p Ѭ href="http://pao.chadwyck.com/articles/displayItem.do?FormatType=fulltextpdf&direct=true&QueryType=articles&ResultsID=13439EB26E956207E&filterSequence=0&ItemNumber=38&journalID=7624">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -162,7 +150,7 @@
 <dt><b>Downtown 81</b> (2000)</dt>
 <dd>Directed by Edo Bertoglio. Cast: Jean-Michel Basquiat, Deborah Harry, Kid Creole, Tuxedomoon, James White, Saul Williams, Walter Steding, Anna Schroeder, John Lurie, DNA, The Plastics. A portrait of the explosive early-80's Manhattan art and music scene with the main focus on the provocative 19-year-old artist Jean-Michel Basquiat, already known for his excursions into street graffiti art and pioneering electro-beat. The film focuses on a day in the life of Basquiat, who needs to raise money to reclaim the apartment from which he has been evicted. He wanders the downtown streets carrying a painting he hopes to sell, encountering friends, who are on the cutting edge of new wave music, new painting, hip hop and graffiti. 72 min. <b>DVD 1367</b></dd>
 <dd>â€¢149; Ѭ href="http://us.imdb.com/Title?0208993">Credits and other information from the Internet Movie DatabaseЖ</dd>
-<dd data-sortby="9">See also:Julian Schnabel (Indepependent View) - interview about the making of this film. <b>Video/C MM100</b><dl>
+<dd data-sortby="9">See also:Julian Schnabel (Independent View) - interview about the making of this film. <b>Video/C MM100</b><dl>
 <dd data-sortby="9">Reviews and articles:</dd>
 <dd>â€¢149;Johnston, Christopher F. "'Screening' the Sexuality of Jean-Michel Basquiat: The Artist in Two Films <i>Popular Culture Review</i>, vol. 18, no. 1, pp. 73-84, Winter 2007</dd>
 </dl>
@@ -175,8 +163,8 @@
 </dl>
 <dl>
 <dt><b>The Draughtsman's Contract</b> (1983)</dt>
-<dd>Director, Peter Greenaway. Cast: Anthony Higgins, Janet Suzman, Anne Louise Lambert, Neil Cunningham, Hugh Fraser. An English noblewoman hires a young draughtsman to create twelve drawings of her estate in return for twelve sexual favors. This simple arrangement soon spirals out of control and the draughtsman finds himself as the prime suspect in a bizarre murder mystery. 104 min. <b>DVD 5927</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?0083851">Credits and other information from the Internet Movie DatabaseЖ
-Ѭ href="ttp://www.lib.berkeley.edu/MRC/ukbib.html#draughtsman">See separate bibliography of reviews and articles about this filmЖ</dd>
+<dd>Director, Peter Greenaway. Cast: Anthony Higgins, Janet Suzman, Anne Louise Lambert, Neil Cunningham, Hugh Fraser. An English noblewoman hires a young draughtsman to create twelve drawings of her estate in return for twelve sexual favors. This simple arrangement soon spirals out of control and the draughtsman finds himself as the prime suspect in a bizarre murder mystery. 104 min. <b>DVD 5927</b><dd>â€¢149;Ѭ href="http://us.imdb.com/title?0083851">Credits and other information from the Internet Movie DatabaseЖ
+</dd>
 </dl>
 <dl>
 <dt><b>Dreams (Kon-na yume o mita)</b> (1990)</dt>
@@ -385,12 +373,14 @@
 <dt><b>Moulin Rouge!</b> (Australia / USA, 2001)</dt>
 <dd>Director, Baz Luhrmann. Cast: Nicole Kidman, Ewan McGregor, John Leguizamo, Jim Broadbent, Richard Roxburgh, Garry McDonald, Jacek Koman, Matthew Whittet, Kerry Walker. Christian, an idealistic and impoverished young writer newly arrived in Montmartre, is haphazardly inducted into a circle of young bohemians led by Toulouse-Lautrec. A comedy of mistaken identities ensues, quickly enmeshing the young poet in a love triangle involving the unobtainable and consumptive Satine, queen courtesan of the Moulin Rouge, and the foppish Duke of Roxbury, his villainous rival for her affections. Special features (Disc 1): theatrical trailers: production commentary by Baz Luhrmann, Catherine Martin, and Don McAlpine: writing commentary by Baz Luhrmann and Craig Pearce: 8 behind-the-scenes branches. (Disc 2): The making of Moulin Rouge HBO Special: 5 "Star" featurettes: earlier drafts of screenplay: 6 extended scenes & 4 re-cut dance sequences: interview with John "Cha Cha" O'Connell and Caroline O'Connor: dance pre-shoots: 3 multi-angle dance sequences: 2 music videos: live MTV performance: design and marketing gallery. 128 min. <b>DVD 976</b></dd>
 <dd>â€¢149; Ѭ href="http://us.imdb.com/Title?0203009">Credits and other information from the Internet Movie DatabaseЖ<br>
-â€¢149;<b>Awards</b>
+â€¢149;
 <dl>
+<dd data-sortby=9><b>Awards</b></dd>
 <dd>â€¢149;Broadcast Film Critics Association Awards - Best Director</dd>
 <dd>â€¢149;Golden Globe Awards, USA - Best Motion Picture - Comedy/Musical</dd>
 <dd>â€¢149;National Board of Review, USA - Best Film</dd>
-</dl><dl><dd data-sortby=9>Reviews and articles:</dd>
+</dl>
+<dl><dd data-sortby=9>Reviews and articles:</dd>
 <dd>â€¢149;â€¢197;strom, Berit. "Referred pain: privileging male emotions in narrative instances of female physical suffering" <i>Journal of Gender Studies</i> Volume 20, Issue 2, 2011 Ѭ href="http://www.tandfonline.com/doi/pdf/10.1080/09589236.2011.565193">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Bell, Philip. "Moulin rouge!: Baz Luhrmann, Australia, 2001." In: <b>The cinema of Australia and New Zealand</b> / edited by Geoff Mayer & Keith Beattie. London ; New York : Wallflower Press, 2007. (Main (Gardner) Stacks PN1993.5.A8 C55 2007)</dd>
 <dd>â€¢149;Bennett, Kathryn Conner. "The Gender Politics of Death." <i>Journal of Popular Film and Television</i>, Fall 2004, Vol. 32 Issue 3, p110-120, 11p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=aft&AN=505113221&site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
