--- a/03_jQuery-Test/asianamgen.html
+++ b/03_jQuery-Test/asianamgen.html
@@ -5,21 +5,8 @@
 </head>
 <body>
 <div id="dvData">
-<table>
-<tr><td><br>
-<img src="http://www.lib.berkeley.edu/MRC/asianam.gif"><br>
-<h3>General and Miscellaneous Works</h3><dl>
-<dd>Contents:</dd>
-<dd>â€¢149; Ѭ href="#video">VideosЖ</dd>
-<dd>â€¢149; Ѭ href="#sound">Sound RecordingsЖ</dd>
-</dl>
-Ѭ href="#sound">Ж<dl>
-<dd data-sortby="9">See also the following MRC Videographies:</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/EthnicImagesVid.html">The Movies, Race, EthnicityЖ (for cinema works by Asian American filmmakers or films with images of Asian Americans</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/mixedracevid.html">People of Mixed Race - Interracial Marriage/DatingЖ</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/CJKVid.html">China, Japan, Korea, & Pacific IslandsЖ</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/SSEAsiaVid.html">South and South East Asia and Oceania StudiesЖ (includes videos about South/South East Asians living in countries other than the US)</dd>
-</dl><dl>
+<h1>Asian, Pacific, and South Asian American Studies</h1>
+<dl>
 <dt><b>Abandoned: The Betrayal of America's Immigrants</b></dt>
 <dd>Looks at the most recent wave of anti-immigrant sentiment in the United States and at the personal impact of new immigration laws, focusing on the severity of current detention and deportation policies. Legal residents find themselves torn away from their American families and sent to countries they barely know while political asylum seekers are kept for years in county jails that profit from their incarceration. Directed by David Belle and Nicholas Wrathall. 2000. 55 min. <b>DVD 6747 Video/C 7695</b><br>
 Ѭ href="http://www.lib.berkeley.edu/MRC/onlinecopyright.html">&copy; noticeЖ<br>
