--- a/03_jQuery-Test/cedlectures.html
+++ b/03_jQuery-Test/cedlectures.html
@@ -7,9 +7,7 @@
 <table>
 <tr><td><br>
 <h2>UC Berkeley<br>
-College of Environmental Design Lectures</h2><dl>
-<dd>Ж</dd>
-</dl>
+College of Environmental Design Lectures</h2>
 <dl>
 <dt><b>[Abe, Hitoshi]The Elephant and the Architecture</b></dt>
 <dd>A lecture presented by Hitoshi Abe, architect and professor at Tohoku University, considered one of the most promising young architects in Japan today. Winner of the Architects Institute of Japan Award and Business Week/Architectural Record Award in 2003, he is known for work that is spatially complex and structurally innovative. This event took place at the University of California, Berkeley on February 2, 2006. 76 min. DVD 5938</dd>
