--- a/03_jQuery-Test/pomo.html
+++ b/03_jQuery-Test/pomo.html
@@ -406,7 +406,7 @@ Requires Ѭ href="http://www.microsoft.com/windows/windowsmedia/default.mspx">Wi
 <dd>A fascinating look at the history of video art from the critical perspective of seminal media artists in the U.S. Visually stimulating, this documentary portraits the development of the technological image and its influence in our culture as well as the complex relationship that exists between the independent producer and the established mass-media. c2003. 40 min. <b>DVD 4933</b></dd>
 </dl>
 <dl>
-<dt>Ѭ href="#top">To the topЖ</dt>
+
 <dt>
 </dt>
 </dl>
@@ -532,9 +532,7 @@ Requires Ѭ href="http://www.microsoft.com/windows/windowsmedia/default.mspx">Wi
 <dd>A surrealistic movie was written over the course of a three day exchange of fantasies and dreams. 16 min. <b>DVD 3341; DVD X2181  999:108; vhs 999:173; 999:2252</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0020530/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<dl>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/Bunuelbib.html#chien"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
-</dl>
+
 <h3>â€¢149;Rene ClairЖ</h3>
 <dl>
 <dd data-sortby="9">See also:</dd>
@@ -573,9 +571,7 @@ Requires Ѭ href="http://www.microsoft.com/windows/windowsmedia/default.mspx">Wi
 <dd>Performers: Jean Marais, Josette Day. Dramatized adaptation of the classic fairy tale. Tells the fable of the kindly beast and the self-sacrificing beauty whose love releases the prince in him. Contains such visual displays as tears that become real diamonds and walls that grow arms to light Beauty's path through the castle of the Beast. 90 min. <b>DVD 216  999:113</b></dd>
 <dd>â€¢149; Ѭ href="http://www.imdb.com/title/tt0038348/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<dl>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/frenchbib.html#beauty"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
-</dl>
+
 <dl>
 <dt><b>Blood of a Poet (Le Sang d'un Poete)</b>(France, 1930.)</dt>
 <dd>A surrealistic allegorical myth about the life of a poet who sacrifices himself to his art. Blood of a Poet, exploring the torturous relationship between the artist and his creations. 54 min. <b>DVD 210; vhs 999:117</b></dd>
@@ -676,11 +672,9 @@ Requires Ѭ href="http://www.microsoft.com/windows/windowsmedia/default.mspx">Wi
 <dd>Directed by Germaine Dulac. "One of the first feminist movies, The Smiling Madame Beudet is the story of an intelligent woman trapped in a loveless marriage. Her husband is used to playing a stupid practical joke in which he puts an empty revolver to his head and threatens to shoot himself. One day, while the husband is away, she puts bullets in the revolver. However, she is stricken with remorse and tries to retrieve the bullets the next morning. Her husband gets to the revolver first only this time he points the revolver at her." [Internet Movie Database]. Based on the play by Denys Amiel. Silent with music and French intertitles. 26 min. <b>DVD X5062; vhs 999:838</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0013626/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
-<dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0013626/">Credits and other information from the Internet Movie DatabaseЖ</dd>
+<dd data-sortby="9">â€¢149;Ѭ href="http://www.imdb.com/title/tt0013626/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<dl>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/avantbib.html#beudet"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
-</dl>
+
 <h3>â€¢149;Viking EggelingЖ</h3>
 <dl>
 <dt><b>Symphonie Diagonale</b> (Germany, 1924)</dt>
@@ -1054,7 +1048,7 @@ Requires Ѭ href="http://www.microsoft.com/windows/windowsmedia/default.mspx">Wi
 <dd>Impressions of Nice, France, featuring the Mardi Gras celebration. Employs some Surrealist or Dada techniques. <b>DVD 3482; vhs 999:1151</b></dd>
 </dl>
 <dl>
-<dt>Ѭ href="#top">To the topЖ</dt>
+
 <dt>
 </dt>
 </dl>
@@ -1967,9 +1961,7 @@ Requires Ѭ href="http://www.microsoft.com/windows/windowsmedia/default.mspx">Wi
 <dd>Analyzes the relationship between the Lumi&egrave;re brothers 45 second film 'Workers leaving the factory', and workers leaving the factory throughout the history of cinema. Originally released as a motion picture in 1995. Director, Harun Farocki; editor, Max Reimann. Dubbed in English; with some sections subtitled in German. Dist.: Ѭ href="http://www.vdb.org/">Video Data BankЖ. <b>DVD 9978; vhs MM1039</b></dd>
 </dl>
 <h3>â€¢149;P&eacute;ter Forg&aacute;cs;Ж</h3>
-<dl>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/avantbib.html#Forgacs"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
-</dl>
+
 <dl>
 <dt><b>Bartos Family: The Father and His Three Sons</b></dt>
 <dd>Having carefully collected home movies, from the early 20th century through the thirties and forties, Forgacs renders a lyrical portrait of the Bartos family in Budapest, Hungary. The small rituals and events of this bourgeois family provide a view of the bridging of an age and culture, creating a mirror that reflects the face of private and official history. The Hungarian Quisling government looted the rich family and WWII and later Communism eventually completely destroyed their wealth. 1988 60 min. <b>DVD 3201</b></dd>
