--- a/03_jQuery-Test/spanishculture.html
+++ b/03_jQuery-Test/spanishculture.html
@@ -174,9 +174,7 @@ Bibliography on this topic: </dd>
 <dt><b>[Zambrano, Mar&iacute;a] Mar&iacute;a Zambrano</b></dt>
 <dd>Documentary film of the Spanish essayist and philosopher, Mar&iacute;a Zambrano. Presented at the International Latino Film Festival held in the San Francisco Bay Area. In Spanish without English subtitles. 43 min. <b>DVD X5931</b></dd>
 </dl>
-<dl>
-<dt>Ж</dt>
-</dl>
+
 <h3><b>Spanish History and Life</b></h3>
 <dl>
 <dt><b>Acts of Faith: Jewish Civilization in Spain</b></dt>
@@ -276,9 +274,7 @@ Bibliography on this topic: </dd>
 <dt><b>Toward a Livable City</b></dt>
 <dd>This program looks at the development of Barcelona, a city dating to pre-Christian times, which grew slowly until the advent of the Industrial Revolution. Shows how the results of research can be applied to improve the allocation of scarce resources in housing, transportation, fuel consumption, air quality control, and waste disposal. c1991. 28 min. Video/C 8332</dd>
 </dl>
-<dl>
-<dt>Ж</dt>
-</dl>
+
 <h3><b>Spanish Civil War</b></h3>
 <dl>
 <dd><b>SEE</b></dd>
@@ -287,9 +283,7 @@ Bibliography on this topic: </dd>
 <dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/PACSVid.html#spanishcivilwar">Peace & Conflict StudiesЖ (documentaries)</dd>
 <dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/Warfilm.html#spain">War MoviesЖ (fictional films)</dd>
 </dl>
-<dl>
-<dt>Ж</dt>
-</dl>
+
 <h3><b>Portuguese History and Life</b></h3>
 <dl>
 <dt><b>Acto dos Feitos da Guine</b></dt>
@@ -358,7 +352,7 @@ Bibliography on this topic: </dd>
 <dd>A documentary on the life and work of the Azorean writer, Emanuel Felix. Includes a biographical sketch, commentary by the author and his contemporaries, with dramatic readings from his works. In Portuguese. 1999. DVD 6581</dd>
 </dl>
 <dl>
-<dt>Ѭ href="#top">To the topЖ</dt>
+
 <dt> Ж</dt>
 </dl>
 <h2>Spanish and Latin American Literature</h2>
@@ -666,7 +660,7 @@ Bibliography on this topic: </dd>
 <dd>â€¢149; <b>El Quijote.</b> Una produccion de Emiliano Piedra para Television Espa&ntilde;ola. Film originally produced in 1991. In Spanish (no subtitles) 5 videocassettes (310 min.) Video/C 5090</dd>
 <dd>â€¢149; <b>Don Quixote.</b> Directed by Peter Yates, TV, 1999. Cast: John Lithgow, Bob Hoskins, Isabella Rossellini, Vanessa Williams. 140 min. DVD 8474</dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0181212/">Credits and other information from the Internet Movie DatabaseЖ</dd>
-<dd>â€¢149; <b>Don Quixote.</b> Directed by G.W. Pabst, 1933. 76 min. 999:2442<li>â€¢149;Ѭ href="http://us.imdb.com/title?0023956">Credits and other information from the Internet Movie DatabaseЖ</dd>
+<dd>â€¢149; <b>Don Quixote.</b> Directed by G.W. Pabst, 1933. 76 min. Video 999:2442<li>â€¢149;Ѭ href="http://us.imdb.com/title?0023956">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149; <b>Don Quixote</b> [AUDIORECORDING] (Selected readings from his own translation, by Walter Starkie. Contents: Don Quixote and Sancho Panza.--The Windmills.--The Goatherds and the Golden Age.--The Inn.--Arms and letters.--Sancho Panza and his Wife Teresa.--The Knight of the White Moon.--Don Quixote's Last Days.--Epitaph.) Sound/C 773</dd>
 </dl>
 <dl>
@@ -675,7 +669,7 @@ Bibliography on this topic: </dd>
 </dl>
 <dl>
 <dt><b>Dorfman, Ariel</b></dt>
-<dd>â€¢149; <b>Death and the Maiden.</b> Director Roman Polanski, 1994. Fifteen years ago, Paulina Escobar had her life shattered when she was taken prisoner and tortured by a sadistic doctor. Now, through a chance encounter, she may have found the man responsible for her nightmares and tonight he's going to pay. But how far will she go to get even? And how can she be sure, after so many years, that she has found the right man? 103 min. 999:2060<li>â€¢149;Ѭ href="http://us.imdb.com/title?0109579">Credits and other information from the Internet Movie DatabaseЖ</dd>
+<dd>â€¢149; <b>Death and the Maiden.</b> Director Roman Polanski, 1994. Fifteen years ago, Paulina Escobar had her life shattered when she was taken prisoner and tortured by a sadistic doctor. Now, through a chance encounter, she may have found the man responsible for her nightmares and tonight he's going to pay. But how far will she go to get even? And how can she be sure, after so many years, that she has found the right man? 103 min. Video 999:2060<li>â€¢149;Ѭ href="http://us.imdb.com/title?0109579">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149; <b>My House is on Fire.</b> Written and directed by Rodrigo Dorfman and Ariel Dorfman. Ariel Dorfman's acclaimed play, written in exile in Amsterdam twenty years ago, originally depicted the fear and confusion of two children growing up under the Chilean dictatorship. In this cinematic adaptation, the author and his son have relocated the setting to the American South. Pablo, age 9, and his six-year-old sister, Maria-Victoria, are children of illegal immigrants playing "waiting for the enemy." Seen through the eyes of the young children, this film creates the atmosphere of fear, anxiety, and unknowing that permeate the experience of being "illegal." 1997. 19 min. Video/C 5732<li>â€¢149;Ѭ href="http://us.imdb.com/title?0163757">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
@@ -734,7 +728,7 @@ Bibliography on this topic: </dd>
 <dt><b>Guiraldes, Ricardo</b><br>
 </dt>
 <dd><b>Don Segundo Sombra</b></dd>
-<dd>Directed by Manuel Antin, 1969. Don Segundo Sombra narrates the story of Fabio Caceres as he grows into adulthood. Don Segundo Sombra, an old "gaucho", is his mentor and model; he teaches him moral and human values through his behavior, stories, and example. 110 min. 999:1386</dd>
+<dd>Directed by Manuel Antin, 1969. Don Segundo Sombra narrates the story of Fabio Caceres as he grows into adulthood. Don Segundo Sombra, an old "gaucho", is his mentor and model; he teaches him moral and human values through his behavior, stories, and example. 110 min. Video 999:1386</dd>
 </dl>
 <dl>
 <dt><b>Hernandez, Jose</b><br>
@@ -873,7 +867,7 @@ Bibliography on this topic: </dd>
 <dd>â€¢149; <b>Kiss of the Spider Woman</b> (1985)</dd>
 <dd>Dir. Hector Babenco. A homosexual and a politically active journalist share a prison cell in an unnamed South American country. Based on: <i>Beso de la Mujer Arana</i> 119 min DVD X192 (PAL region 2); vhs 999:224</dd>
 <dd>â€¢149; <b>Painted Lips (Boquitas pintadas)</b> (Argentina, 1974)</dd>
-<dd>Directed by Leopoldo Torre Nilsson. Lies, double personalities, and the evil pettiness of life in a small town are revealed in this adaptation of the novel by Manuel Puig. Nene, a married woman with two children, receives news that her childhood sweetheart, Juan Carlos, has died. Gradually she pieces together a complex mosaic of his life revealing the portrait of a man driven by fear into a life of self-deception. Adapted from a novel by Manuel Puig. 120 min. 999:3374</dd>
+<dd>Directed by Leopoldo Torre Nilsson. Lies, double personalities, and the evil pettiness of life in a small town are revealed in this adaptation of the novel by Manuel Puig. Nene, a married woman with two children, receives news that her childhood sweetheart, Juan Carlos, has died. Gradually she pieces together a complex mosaic of his life revealing the portrait of a man driven by fear into a life of self-deception. Adapted from a novel by Manuel Puig. 120 min. Video 999:3374</dd>
 <dd>â€¢149; <b>Pubis Angelical</b> (1982)</dd>
 <dd>Director, Raul de la Torre. While in her hospital bed, a woman reflects on her life and the roles men have played in her life, against a backdrop of Argentine political events. 117 min. Video/C 999:1405</dd>
 </dl>
