--- a/03_jQuery-Test/writers.html
+++ b/03_jQuery-Test/writers.html
@@ -68,7 +68,7 @@
 <dt><b>Basic Instinct</b> (1992)</dt>
 <dd>Directed by Paul Verhoeven. Cast: Michael Douglas, Sharon Stone, George Ozundza, Jeanne Tripplehorn. A tough but vulnerable detective investigates a murder identical to one described in the latest novel of a cold, calculating and beautiful novelist with an insatiable sexual appetite. 123 min. <b>DVD 886; VHS 999:2282</b></dd>
 <dd>â€¢149;Ѭ href="%20http://us.imdb.com/Title?0103772">Credits and other information from the Internet Movie DatabaseЖ</dd>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/gangsterbib.html#instincts"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
+
 </dl>
 <dl>
 <dt><b>Beat</b> (2000)</dt>
@@ -344,9 +344,7 @@
 <dt><b>In a Lonely Place</b> (1950)</dt>
 <dd>Director, Nicholas Ray. Cast: Humphrey Bogart, Gloria Grahame, Frank Lovejoy, Carl Benton Reid, Art Smith, Jeff Donnell, Martha Stewart. A hotheaded Hollywood screenwriter, questioned for murder, is drawn to his neighbor when she confirms his alibi. His volatile nature eventually threatens to destroy their one last chance for real love. <b>DVD 3486  999:974</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0042593/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<dl>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/nickray.html#lonely"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
-</dl>
+
 <dl>
 <dt><b>In Custody</b> (UK / India, 1993)</dt>
 <dd>Directed by Ismail Merchant. Cast: Shashi Kapoor, Shabana Azmi, Om Puri, Sushma Seth, Neena Gupta, Tinnu Anand, Prayag Raj, Ajay Sahmi. Nur is considered the greatest living Urdu poet and Deven hopes to rekindle interest in the language by recording Nur reciting his magical verse. But multiple problems block Deven's path, the greatest being Nur's two shrewish wives, his love of drink, and the vastly bloated poet himself. Deven's monstrous task quickly turns into a cultural odyssey that follows a humorous path to an unexpected conclusion. 124 min. <b>DVD 3712</b></dd>
@@ -521,9 +519,7 @@ DD&gt;â€¢149;Rapf, Joanna E. "Mythic Figures: Women and Co-Being in Three Fi
 <dt><b>Naked Lunch</b></dt>
 <dd>Director/writer, David Cronenberg.Cast: Peter Weller, Judy Davis, Ian Holm, Julian Sands, Monique Mercure, Nicholas Campbell, Michael Zelniker, Robert A. Silverman, Joseph Scorsiani, Roy Scheider. Part-time pest-control man and full-time drug addict Bill Lee seeks escape from his troubled existence in 1953 New York and flees to Interzone (a hallucinatory version of Tangiers) where reality and fantasy have merged. It's a strange, surreal landscape inhabited by mugwumps, half-alien, half-insect creatures, man-sized centipedes, carnivorous typewriters and bizarre humans. Compelled to make sense of this alien territory, he writes a book called "Naked lunch." Filled with spectacular special effects and stunning imagery. 115 min. <b>DVD 3630</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0102511/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<dl>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/cronenberg.html#lunch"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
-</dl>
+
 <dl>
 <dt><b>A Night to Remember</b> (1942)</dt>
 <dd>Directed by Richard Wallace. Cast: Loretta Young, Brian Aherne, Jeff Donnell, William Wright, Sidney Toler. A woman rents a gloomy basement apartment in Greenwich Village thinking it will provide the perfect atmosphere for her mystery writer husband to create his next book. They soon find themselves in the middle of a real-life mystery when a corpse turns up in their apartment 91 min. DVD 3483</dd>
@@ -537,9 +533,7 @@ DD&gt;â€¢149;Rapf, Joanna E. "Mythic Figures: Women and Co-Being in Three Fi
 <dt><b>Orphâ€¢233;e (Orpheus)</b> (1949)</dt>
 <dd>Directed by Jean Cocteau. Orpheus is a poet who becomes obsessed with Death (the Princess). They fall in love. Orphee's wife, Eurydice, is killed by the Princess' henchmen and Orphee goes after her into the Underworld. Although they have become dangerously entangled, the Princess sends Orphee back out of the Underworld, to carry on his life with Eurydice. Cocteau's modern version of the Orpheus legend, based on his own play. 86 min. <b>DVD 209; vhs 999:211</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0041719/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<dl>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/frenchbib.html#orpheus"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
-</dl>
+
 <dl>
 <dt><b>Permanent Midnight</b> (1998)</dt>
 <dd>Director, David Veloz. Cast: Ben Stiller, Elizabeth Hurley, Maria Bello, Owen Wilson, Cheryl Ladd, Peter Greene, Janeane Garofalo. A dramatization of the true story of TV writer Jerry Stahl who makes a fortune writing drivel and sinks into unrepentant drug addiction. 88 min. <b>DVD 9086</b></dd>
@@ -560,9 +554,7 @@ DD&gt;â€¢149;Rapf, Joanna E. "Mythic Figures: Women and Co-Being in Three Fi
 <dd>â€¢149;Golden Globes - Best Motion Picture; Comedy/Musical; Best Actor, Comedy/Musical (Tim Robbins)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Film; Best Director</dd>
 </dl>
-<dl>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/altman.html#player"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
-</dl>
+
 <dl>
 <dt><b>Il Postino (The Postman)</b> (France / Italy / Belgium, 1994)</dt>
 <dd>Directed by Michael Radford. Cast: Philippe Noiret, Massimo Troisi, Maria Grazia Cucinotta. In this romantic comedy the postman, Mario, enlists the aid of the poet Pablo Neruda to conquer the heart of the beautiful Beatrice. 103 min. <b>DVD 9136; vhs 999:2064</b></dd>
@@ -669,7 +661,7 @@ DD&gt;â€¢149;Rapf, Joanna E. "Mythic Figures: Women and Co-Being in Three Fi
 <dd>Directed by John Madden, Cast: Gwyenth Paltrow, Joseph Fiennes, Geoffrey Rush, Colin Firth, Ben Affleck and Judi Dench. When Will Shakespeare needs passionate inspiration to break a bad case of writer's block, a secret romance with the beautiful Lady Viola starts the words flowing like never before! There are just two things he'll have to learn about his new love: she's promised to marry someone else, and she's successfully impersonating a man in order to play the lead in Will's latest production! 1998. 122 min. <b>DVD 59; VHS 999:2440</b></dd>
 </dl>
 <dl>
-<dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0138097/">Credits and other information from the Internet Movie DatabaseЖ</dd>
+<dd data-sortby="9">â€¢149;Ѭ href="http://www.imdb.com/title/tt0138097/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <p>â€¢149;<b>Awards</b></p>
 <dl>
@@ -678,9 +670,7 @@ DD&gt;â€¢149;Rapf, Joanna E. "Mythic Figures: Women and Co-Being in Three Fi
 <dd>â€¢149;Golden Globes - Best Film, Comedy/Musical;</dd>
 <dd>â€¢149;National Society of Film Critics Awards, USA - Best Film; Best Supporting Actress (Judi Dench)</dd>
 </dl>
-<dl>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/ShakespeareBib.html#billinlove"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
-</dl>
+
 <dl>
 <dd data-sortby="9">See also:</dd>
 <dd>â€¢149;Norman, Marc. New York : Hyperion, Miramax Books, c1998. (Main (Gardner) Stacks PN1997 .S38365 1998b)</dd>
@@ -689,9 +679,7 @@ DD&gt;â€¢149;Rapf, Joanna E. "Mythic Figures: Women and Co-Being in Three Fi
 <dt><b>The Shining</b> (USA / UK, 1980)</dt>
 <dd>Directed by Stanley Kubrick. Cast: Jack Nicholson, Shelley Duvall, Scatman Crothers, Danny Lloyd. "A novelist - Jack Torrance take a job interview as winter caretaker of the isolated, old, huge and beautiful Overlook Hotel. In the interview, Jack is told by the manager himself, that the previous caretaker - Grady, chopped his family and later killed himself with a shotgun. Ignoring the story, Jack brings his wife - Wendy and his son Danny. It happens that Danny, has a mysterious power known as "The Shining" that shows him things from the past and future. Some of the visions come from Tony - "the little boy who lives in Danny's mouth". Danny meets Hallorann - the hotel cook in their first day arriving at the Overlook, who also has this "Shining" and he warns him about the hotel and the sinister Room 237. As the days go by, Danny has visions of previous guests and employees who died at the hotel years before, meanwhile Jack starts driving into insanity, turning more and more aggressive, at the point that Danny and Wendy gets convinced that Jack might try to do the same thing, Grady did." [Ѭ href="http://us.imdb.com/title/tt0081505/plotsummary">IMDBЖ] 143 min. <b>DVD 198; VHS 999:992</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0081505/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<dl>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/kubrick.html#shining"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
-</dl>
+
 <dl>
 <dt><b>The Singing Detective</b> (UK, TV, 1986)</dt>
 <dd>Directed by Jon Amiel. The hallucinations of a mystery writer stricken with a crippling skin disorder interweave memories of his past with a plot casting him in the role of a suave sleuth who croons with a big band. Vol. 1. Skin -- Vol. 2. Heat -- Vol. 3. Lovely days -- Vol. 4. Clues -- Vol. 5. Pitter patter -- Vol. 6. Who done it. Approx. 70 min. each <b>DVD 1666; vhs 999:1750 (6 parts)</b><li>â€¢149; Ѭ href="http://us.imdb.com/title/tt0090521/">Credits and other information from the Internet Movie DatabaseЖ</dd>
@@ -748,9 +736,7 @@ DD&gt;â€¢149;Rapf, Joanna E. "Mythic Figures: Women and Co-Being in Three Fi
 <dd>â€¢149;National Board of Review, USA - Best Film; Best Actress (Gloria Swanson)</dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
 </dl>
-<dl>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/wilderbib.html#sunset"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
-</dl>
+
 <dl>
 <dt><b>Swimming Pool</b> (France | UK, 2003)</dt>
 <dd>Directed by Franâ€¢231;ois Ozon. Charlotte Rampling, Ludivine Sagnier, Charles Dance, Marc Fayolle, Jean-Marie Lamour. Sarah is a famous British murder mystery author. Tired of London and seeking inspiration for her new novel, she accepts an offer from her publisher to stay at his home in the south of France. Sarah finds that the beautiful country locale and unhurried pace is just the tonic for her - until late one night, when John's sexy and provocative daughter, Julie, unexpectedly arrives. Sarah's English reserve is jarred by Julie's lifestyle. An increasingly unsettling series of events occur that blend a creative process with a possible real-life murder. Special features: interviews with Charlotte Rampling and Ludivine Sagnier; outtakes; poster and picture galleries. 103 min. <b>DVD 6930</b></dd>
@@ -795,9 +781,7 @@ DD&gt;â€¢149;Rapf, Joanna E. "Mythic Figures: Women and Co-Being in Three Fi
 <dd>â€¢149;British Academy of Film and Television Arts Awards - Best British Film</dd>
 <dd>â€¢149;Cannes Film Festival - Grand Prize of the Festival</dd>
 </dl>
-<dl>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/ukbib.html#thirdman"><img align="top" img="" src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</dd>
-</dl>
+
 <dl>
 <dt><b>Time Regained (Le Temps Retrouvâ€¢233;)</b> (France / Italy / Portugal, 1999)</dt>
 <dd>Directed by Raoul Ruiz. Featuring Catherine Deneuve, Emmanuelle Beart, Vincent Perez, John Malkovich, Marcello Mazzarella. Set in 1922, this film opens with the French author on his deathbed remembering his life. Gradually his own experiences give way to the characters in his novels -- fiction eclipses reality as the author's creations combine with his own experiences. The result is a montage of moving snapshots and feverish dreams that make the film the ultimate in Proustian cinema. 158 min. <b>DVD 632</b></dd>
